; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/api/extr_esp_gap_bt_api.c_esp_bt_gap_get_bond_device_num.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/api/extr_esp_gap_bt_api.c_esp_bt_gap_get_bond_device_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_BLUEDROID_STATUS_ENABLED = common dso_local global i64 0, align 8
@ESP_FAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_bt_gap_get_bond_device_num() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @esp_bluedroid_get_status()
  %3 = load i64, i64* @ESP_BLUEDROID_STATUS_ENABLED, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @ESP_FAIL, align 4
  store i32 %6, i32* %1, align 4
  br label %9

7:                                                ; preds = %0
  %8 = call i32 (...) @btc_storage_get_num_bt_bond_devices()
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %7, %5
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i64 @esp_bluedroid_get_status(...) #1

declare dso_local i32 @btc_storage_get_num_bt_bond_devices(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
